--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="fv-img">
           <div class="fv-copy">
             <p>
-              デザインで人を笑顔にする会社<br>
+              人を笑顔にする会社<br>
               DIGSMILE INC.
             </p>
             <h1>
